added transaction endpoints UPDATE, DELETE
